--- a/amazon.html
+++ b/amazon.html
@@ -52,10 +52,11 @@
     </div>
     
     <div class="main">
-      <div class="products-grid js-products-grid">
+      <div class="products-grid">
       </div>
-    </div>
 
-    <script type="module" src="scripts/amazon.js"></script>
+
+      <script type="module" src="scripts/amazon.js"></script>
+    </div>
   </body>
 </html>
