--- a/checkout.html
+++ b/checkout.html
@@ -29,8 +29,8 @@
         </div>
 
         <div class="checkout-header-middle-section">
-          Checkout (<a class="return-to-home-link"
-            href="amazon.html">3 items</a>)
+          Checkout (<a class="return-to-home-link js-return-to-home-link"
+            href="amazon.html"></a>)
         </div>
 
         <div class="checkout-header-right-section">
@@ -82,7 +82,7 @@
         </div>
       </div>
     </div>
-
+  
     <script type="module" src="scripts/checkout.js"></script>
   </body>
 </html>
