--- a/orders.html
+++ b/orders.html
@@ -176,7 +176,7 @@
             </div>
 
             <div class="product-actions">
-              <a href="tracking.html">
+              <a href="tracking.html?orderID=123&productId=456">
                 <button class="track-package-button button-secondary">
                   Track package
                 </button>
