--- a/amazon.html
+++ b/amazon.html
@@ -52,11 +52,9 @@
     </div>
     
     <div class="main">
-      <div class="products-grid">
-      </div>
-
-
-      <script type="module" src="scripts/amazon.js"></script>
+      <div class="products-grid js-products-grid"></div>
     </div>
+
+    <script type="module" src="scripts/amazon.js"></script>
   </body>
 </html>
