--- a/checkout.html
+++ b/checkout.html
@@ -19,13 +19,15 @@
     <link rel="stylesheet" href="styles/pages/checkout/checkout.css">
   </head>
   <body>
-    <div class="checkout-header js-checkout-header"></div>
+    <div class="checkout-header js-checkout-header">
+    </div>
 
     <div class="main">
       <div class="page-title">Review your order</div>
 
       <div class="checkout-grid">
         <div class="order-summary js-order-summary">
+          
         </div>
 
         <div class="payment-summary js-payment-summary">
@@ -33,7 +35,7 @@
         </div>
       </div>
     </div>
-  
+
     <script type="module" src="scripts/checkout.js"></script>
   </body>
 </html>
